# statismo-ui

./: .gitignore  CMakeLists.txt  README.md  StatismoUI.cpp  StatismoUI.h  client.cpp  ui.thrift
cmake/: FindThrift.cmake
examples/: CMakeLists.txt  viz-client.cpp
src/: StatismoUI.cpp  StatismoUI.h
